--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
     "dev": "pnpm vite",
     "preinstall": "npx only-allow pnpm",
     "postinstall": "turbo run stub",
-    "lint": "turbo run lint",
-    "lint:eslint": "eslint --cache --max-warnings 0  \"{src,mock}/**/*.{vue,ts,tsx}\" --fix",
-    "lint:prettier": "prettier --write .",
-    "lint:stylelint": "stylelint \"**/*.{vue,css,less.scss}\" --fix --cache --cache-location node_modules/.cache/stylelint/",
+    "lint": "pnpm run lint:eslint && pnpm run lint:prettier && pnpm run lint:stylelint",
+    "lint:all": "pnpm run lint:eslint-check && pnpm run lint:prettier-check && pnpm run lint:stylelint-check",
+    "lint:cache-clean": "rimraf node_modules/.cache/eslint && rimraf node_modules/.cache/stylelint && rimraf node_modules/.cache/prettier",
+    "lint:eslint": "eslint --cache --max-warnings 0 \"{src,mock,internal,packages}/**/*.{vue,js,jsx,ts,tsx}\" --fix",
+    "lint:eslint-check": "eslint --cache --max-warnings 0 \"{src,mock,internal,packages}/**/*.{vue,js,jsx,ts,tsx}\"",
+    "lint:fix": "pnpm run lint:eslint && pnpm run lint:prettier && pnpm run lint:stylelint",
+    "lint:prettier": "prettier --write --cache .",
+    "lint:prettier-check": "prettier --check .",
+    "lint:stylelint": "stylelint \"**/*.{vue,css,less,scss}\" --fix --cache --cache-location node_modules/.cache/stylelint/",
+    "lint:stylelint-check": "stylelint \"**/*.{vue,css,less,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
     "prepare": "husky install",
     "preview": "npm run build && vite preview",
     "reinstall": "rimraf pnpm-lock.yaml && rimraf package.lock.json && rimraf node_modules && npm run bootstrap",
@@ -42,19 +48,20 @@
       "eslint --fix"
     ],
     "{!(package)*.json,*.code-snippets,.!(browserslist)*rc}": [
-      "prettier --write--parser json"
+      "prettier --write --parser json"
     ],
     "package.json": [
       "prettier --write"
     ],
     "*.vue": [
       "prettier --write",
-      "eslint --fix",
-      "stylelint --fix"
+      "eslint --fix"
     ],
-    "*.{scss,less,styl,html}": [
-      "prettier --write",
-      "stylelint --fix"
+    "*.{scss,less,styl,css}": [
+      "prettier --write"
+    ],
+    "*.html": [
+      "prettier --write"
     ],
     "*.md": [
       "prettier --write"
@@ -135,6 +142,7 @@
     "czg": "^1.6.1",
     "husky": "^8.0.3",
     "lint-staged": "13.2.0",
+    "pnpm": "^8.5.1",
     "prettier": "^2.8.7",
     "prettier-plugin-packagejson": "^2.4.3",
     "rimraf": "^4.4.1",
@@ -144,8 +152,7 @@
     "unplugin-vue-define-options": "^1.3.3",
     "vite": "^4.3.0-beta.2",
     "vite-plugin-mock": "^2.9.6",
-    "vue-tsc": "^1.2.0",
-    "pnpm": "^8.5.1"
+    "vue-tsc": "^1.2.0"
   },
   "packageManager": "pnpm@8.1.0",
   "engines": {
