--- a/.env.development
+++ b/.env.development
@@ -8,6 +8,7 @@ VITE_PUBLIC_PATH = /
 # VITE_GLOB_API_URL=/basic-api
 # VITE_GLOB_API_URL=http://book.youbaobao.xyz:3000
 VITE_GLOB_API_URL=https://localhost:3030/api
+# VITE_GLOB_API_URL=https://localhost:4000
 
 # File upload address， optional
 VITE_GLOB_UPLOAD_URL=/upload
